# homework_16_1_venv_poetry

new_poetry_project/: pyproject.toml
